# homeamp.ampdata

./: .gitignore  AGENT_FIX_DEPLOYMENT.md  API_CLEANUP_ANALYSIS.md  API_CRUD_COMPLETE.md  ARCHITECTURAL_DUPLICATION_ANALYSIS.md  AUTHORITATIVE_SCHEMA.sql  BENT01_LevelledMobs_changes.md  CLEAN_SCHEMA.sql  CODEBASE_REALITY_CHECK.md  CODEBASE_SCHEMA_ANALYSIS.md  COMPLETE_AUTHORITATIVE_SCHEMA.sql  COMPREHENSIVE_FEATURE_AUDIT.md  CONFIG_WORKFLOW.md  CONTRIBUTING.md  DATABASE_DEPLOYMENT_SUMMARY.md  DATABASE_INITIALIZATION.md  DATABASE_REALITY.md  DATABASE_RESET_COMMANDS.md  DATABASE_SCHEMA_FROM_CODE.md  DATABASE_STANDARDIZATION_SUMMARY.md  DEPLOYMENT_COMMANDS.md  DEPLOYMENT_PL3XMAP.md  DEPLOYMENT_QUICKSTART.md  DOCUMENTATION_SUMMARY.md  ENDPOINT_CONFIG_TRACKING_ANALYSIS.md  FIX_GUI_DEPLOYMENT.md  GITHUB_IMPLEMENTATION.md  GUI_REQUIREMENTS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_COMPLETE.md  MEESEEKS_R1_PROMPT.md  MISSING_FEATURES_AUDIT.md  N8N_AGENT_FLOW_DIAGRAM.md  N8N_WORKFLOW_DESIGN.md  OPTION_C_IMPLEMENTATION_GUIDE.md  PAMPA_COMPLETE_REFERENCE.md  PAMPA_SETUP.md  PHASE0_IMPLEMENTATION_SUMMARY.md  PHASE2_IMPLEMENTATION_SUMMARY.md  (+39 more)
homeamp-v2/: .env.example  .gitignore  DEPLOYMENT_GUIDE.md  FEATURE_LIST.md  FUNCTION_MAPPING.md  IMPLEMENTATION_ROADMAP.md  README.md  SANITY_CHECK_REPORT.md  SCHEMA_DESIGN.md  UI_IMPLEMENTATION_PLAN.md  alembic.ini  pyproject.toml  schema_no_fk.sql  test_import.py
homeamp-v2/deployment/: homeamp-agent.service  homeamp-api.service
homeamp-v2/docs/: TILE_WATCHER_SETUP.md
homeamp-v2/migrations/: README.md  env.py
homeamp-v2/src/: __init__.py
homeamp-v2/src/agent/: __init__.py  __main__.py  homeamp_agent.py  notifications.py  scheduler.py  tile_watcher.py  tile_watcher_service.py
homeamp-v2/src/api/: __init__.py  dependencies.py  main.py
homeamp-v2/src/api/routes/: __init__.py  approvals.py  audit.py  config.py  dashboard.py  datapacks.py  deployments.py  groups.py  instances.py  plugins.py  tags.py  updates.py
homeamp-v2/src/cli/: __init__.py  commands.py
homeamp-v2/src/core/: __init__.py  config.py  database.py  exceptions.py  logging.py
homeamp-v2/src/data/: __init__.py  unit_of_work.py
homeamp-v2/src/data/models/: __init__.py  advanced.py  config.py  datapack.py  deployment.py  instance.py  instance_group.py  monitoring.py  player.py  plugin.py  server_property.py  tag.py  world.py
homeamp-v2/src/data/repositories/: __init__.py  base_repository.py  config_repository.py  deployment_repository.py  instance_repository.py  monitoring_repository.py  plugin_repository.py  tag_repository.py
homeamp-v2/src/domain/: __init__.py
homeamp-v2/src/domain/services/: __init__.py  approval_service.py  audit_service.py  backup_service.py  config_service.py  dashboard_service.py  datapack_service.py  deployment_executor.py  deployment_service.py  discovery_service.py  group_service.py  tag_service.py  update_service.py  validation_service.py
homeamp-v2/src/integrations/: __init__.py  github.py  hangar.py  minio.py  modrinth.py
homeamp-v2/src/web/: __init__.py  routes.py
homeamp-v2/src/web/templates/: base.html  index.html
(+416 files in other folders)
