[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "homeamp-v2"
version = "2.0.0"
description = "HomeAMP Configuration Manager V2.0 - Clean Architecture Refactor"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "jk33v3rs", email = "admin@archivesmp.site"}
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "typer>=0.9.0",
    "rich>=13.6.0",
    "python-multipart>=0.0.6",
    "pymysql>=1.1.0",
    "cryptography>=41.0.0",
    "httpx>=0.25.0",
    "pyyaml>=6.0.1",
    "redis>=5.0.0",
    "python-dotenv>=1.0.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "pylint>=3.0.0",
    "isort>=5.12.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
]

[project.scripts]
homeamp = "homeamp_v2.cli.commands:app"
homeamp-agent = "homeamp_v2.agent.__main__:main"
homeamp-api = "homeamp_v2.api.main:app"
homeamp-tile-watcher = "homeamp_v2.agent.tile_watcher_service:main"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.setuptools]
package-dir = {"homeamp_v2" = "src"}

[tool.setuptools.package-data]
homeamp_v2 = ["web/templates/*", "web/static/**/*"]

[tool.black]
line-length = 120
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 120
skip_gitignore = true
known_first_party = ["homeamp_v2"]

[tool.pylint.main]
max-line-length = 120
disable = [
    "C0103",  # Invalid name
    "C0114",  # Missing module docstring
    "C0115",  # Missing class docstring
    "C0116",  # Missing function docstring
    "R0903",  # Too few public methods
    "R0913",  # Too many arguments
]
good-names = ["i", "j", "k", "ex", "id", "db", "pk", "fk"]

[tool.pylint.design]
max-args = 8
max-attributes = 12
max-locals = 20

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=homeamp_v2",
    "--cov-report=term-missing",
    "--cov-report=html",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["homeamp_v2"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__init__.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
